Add PDF upload, batch analysis, history storage, and enhanced UI components

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Plagiarism Detector & Humanizer</title>
+    <meta name="description" content="Advanced AI Plagiarism Detection and Content Humanization Tool" />
+    <meta name="keywords" content="plagiarism detector, AI detection, content humanizer, academic integrity" />
+    <meta name="theme-color" content="#667eea" />
+    <title>AI Plagiarism Detector & Humanizer - Enterprise Grade</title>
   </head>
   <body>
     <div id="root"></div>
